# Music-Recognition

./: .gitignore  Application.cpp  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  DataPoint.cpp  Database.cpp  Database.h  DebugAudioRecorder.cpp  DebugAudioRecorder.h  FFT.cpp  FFT.h  Graph.cpp  ModelFFT.cpp  Music Recognition.vcxproj  Music Recognition.vcxproj.filters  RootFinder.cpp
Debug/: vc141.idb
Debug/Music Re.06CD5E37.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Music Recognition.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/Music Re.06CD5E37.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Music Recognition.lastbuildstate  Music Recognition.write.1u.tlog  link.command.1.tlog
src/: Application.cpp  AudioRecorder.cpp  AudioRecorder.h  Common.h  DataPoint.h  Database.cpp  Database.h  DebugAudioRecorder.cpp  DebugAudioRecorder.h  FFT.cpp  FFT.h  ModelFFT.cpp  ModelFFT.h
x64/Debug/: vc141.idb
x64/Debug/Music Re.06CD5E37.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Music Recognition.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/Music Re.06CD5E37.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Music Recognition.lastbuildstate  Music Recognition.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
